tests/neg/i4350.scala
import scala.quoted.Type

class Foo[T] {
  '{null.asInstanceOf[T]} // error
}
